apps/homepage/homepage/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homepage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homepage
  template:
    metadata:
      labels:
        app: homepage
    spec:
      serviceAccountName: homepage
      containers:
        - name: homepage
          image: ghcr.io/gethomepage/homepage:v1.13.2 # {"$imagepolicy": "flux-system:homepage"}
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
              name: http
          startupProbe:
            httpGet:
              path: /api/healthcheck
              port: http
              httpHeaders:
                - name: Host
                  value: homepage.int.harville.dev
            failureThreshold: 12
            periodSeconds: 5
            timeoutSeconds: 5
          livenessProbe:
            httpGet:
              path: /api/healthcheck
              port: http
              httpHeaders:
                - name: Host
                  value: homepage.int.harville.dev
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: /api/healthcheck
              port: http
              httpHeaders:
                - name: Host
                  value: homepage.int.harville.dev
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              memory: 256Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
            readOnlyRootFilesystem: false
          volumeMounts:
            - name: homepage-config-dir
              mountPath: /app/config
            - name: homepage-config
              mountPath: /app/config/bookmarks.yaml
              subPath: bookmarks.yaml
              readOnly: true
            - name: homepage-config
              mountPath: /app/config/docker.yaml
              subPath: docker.yaml
              readOnly: true
            - name: homepage-config
              mountPath: /app/config/kubernetes.yaml
              subPath: kubernetes.yaml
              readOnly: true
            - name: homepage-config
              mountPath: /app/config/services.yaml
              subPath: services.yaml
              readOnly: true
            - name: homepage-config
              mountPath: /app/config/settings.yaml
              subPath: settings.yaml
              readOnly: true
            - name: homepage-config
              mountPath: /app/config/widgets.yaml
              subPath: widgets.yaml
              readOnly: true
      securityContext:
        fsGroup: 1000
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
      volumes:
        - name: homepage-config-dir
          emptyDir: {}
        - name: homepage-config
          configMap:
            name: homepage-config
